[package]
name = "blinky"
version = "0.1.0"
authors = ["Christian Blades <christian.blades+github@gmail.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.5"
cortex-m-rt = "0.6"
stm32f1 = "0.6"
embedded-graphics = "0.4"
ssd1306 = "0.2"

[dev-dependencies]
panic-semihosting = "0.5"
cortex-m-semihosting = "0.3"

[dependencies.stm32f1xx-hal]
version = "0.2.0"
features = ["stm32f103", "rt"]

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = "z"

[profile.dev]
incremental = false
codegen-units = 1